corrindindo o problema da lista

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CadernoCamera</string>
+    <string name="title_activity_curso">CursoActivity</string>
 </resources>
